changes since 1.0:

added:
- Ramachandran Plot
- Clipping Planes
- Stereo Modi: Side-by-Side and for shutter googles 
- Preferences for material parameters in OpenGL
- Fog in Scene and its settings to Preferences
- managment of 1D and 2D grids in DatasetControl
- ability of DatasetControl to start visualisation of 1D and 2D grids
- 1D and 2D RegularDataWidgets update their contents automaticaly
- Visualisation of forces
- Writing and loading of project files
- Benchmark Scritps for BALLView
- Visualisation for double- and aromatic bonds in BallAndStick Model

fixed:
- selection in MolecularControl with CRTG and SHIFT modifier
- Cartoon model with missing atoms 
- creation of models for several selected items
- overall cleanup of RegularDataWidgets
- export of PNGs could result in strange problems e.g. with empty images
- it was possible to delete molecular entities while simulation was running -> core dump
- PeptideDialog: deletion of sequence
- problem with normals in Cartoon model
- issue with restoring window's geometry on X11

changed:
- Scene Preferences
- interface for the methods ModularWidget::applyPreferences, defaultPreferences, cancelPreferences